29. Wrap up development, add favicon, meta tags and deploy.

--- a/necro/package.json
+++ b/necro/package.json
@@ -2,11 +2,10 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "prebuild": "rm -rf dist dist.zip",
-    "build": "tsc && vite build && yarn archive",
-    "build:full": "tsc && vite build && yarn squash && yarn archive",
+    "prebuild": "rm -rf dist",
+    "build": "tsc && vite build",
+    "build:full": "tsc && vite build && yarn squash",
     "squash": "tinypng dist/",
-    "archive": "cd dist && zip -9 ../dist.zip -r * && cd ../ && ./scripts/measure.sh dist.zip",
     "typecheck": "tsc",
     "preview": "vite preview"
   },
